gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/e7804_2.d
version https://git-lfs.github.com/spec/v1
oid sha256:369cebe7a171287d59341d9bc46b133558356647c4e4b8476d1b1eb49baa9d81
size 293
